2026-02-13T02:04:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21971855672 # 876
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-13
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 263 297
* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 264 298
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-26 2026-01-27 2026-01-28] / [2026-02-10]

2026-02-12T02:01:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21930679938 # 875
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-12
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 262 296
* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 263 297
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-23 2026-01-24 2026-01-25] / []

2026-02-11T02:08:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21890019279 # 874
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 262 296 / 263 297
* notice: next accum: outdated-unq outdated-all / unq all: 262 296 / 262 296
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-10T02:12:29Z: